Fixed bug #35399 (Since fix of bug #35273 SOAP decoding of soapenc:base64binary fails)